--- a/docker-compose.uffizzi.yml
+++ b/docker-compose.uffizzi.yml
@@ -10,11 +10,8 @@ services:
       resources:
         limits:
           memory: 4000M
-    secrets:
-      - UUID
-      - NEZHA_SERVER
-      - NEZHA_PORT
-      - NEZHA_KEY
+    environment:
+      UUID: afd4eb38-b100-4821-b3b3-8b7394bedf77
       
     restart: always
     ports:
