--- a/nginx.conf
+++ b/nginx.conf
@@ -37,10 +37,10 @@ http {
 		charset              utf-8;
 		root                 html;
 
-		location / {
-			root   /usr/share/nginx/html;
-			index  index.html index.htm;
-		}
+		# location / {
+		# 	root   /usr/share/nginx/html;
+		# 	index  index.html index.htm;
+		# }
 
 
 		location / {
